<resources>
    <string name="app_name">D-Managers</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="text_accounts">All Accounts</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Android Tutorials Hub</string>
    <string name="welcome_text">Welcome to D-Managers</string>
    <string name="login_button">Login</string>
    <string name="create_new_button">Create a new account</string>
    <string name="text_password">Password:</string>
    <string name="create_account_page">Create Account Page</string>
    <string name="text_full_name">Full name:</string>
    <string name="text_email">E-mail:</string>
    <string name="textDOB">Date of Birth:</string>
    <string name="text_gender">Gender:</string>
    <string name="hyperlink">Already have an account? Login here</string>
    <string name="register_button">Register</string>
    <string name="text_confirm_pass">Confirm Password:</string>
    <string name="textTqTitle">Thank you!</string>
    <string name="textThanksMessage">Your submission has been sent for request. Once request is accepted,
        our fellow staff will arrive to pickup the items. If you require any assistance, do feel free
        to call our hotline for support, Thanks once again and have a great day!</string>
    <string name="hint_description">Enter description here</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quantity">Quantity:</string>
    <string name="amount">Amount:</string>
    <string name="home_address">Home Address:</string>
    <string name="phone">Phone:</string>
    <string name="item_name">Item name:</string>
    <string name="pickup_address">Pickup Address:</string>
    <string name="Donation_Page">Donation Page</string>

    <string name="category">Category:</string>

</resources>
